# Piavca

./: README
PIAVCA/: .cdtproject  .cproject  .project  .pydevproject  Doxyfile  INSTALL  Makefile.am  Makefile.in  PIAVCA.sln  PIAVCA_2003.sln  PIAVCA_vc2005.sln  PIAVCA_vc2008 - Copy.sln  SConstruct  SnowLeaopardBuildEnv.sh  aclocal.m4  authors  configure  configure.in  createOFInstall.py  install  install.html  libtool  readme  setup.py
PIAVCA/Bill/: Posture.act  Posture.conf  Postures.xml  Walking.act  Walking.conf  Walking.xml  actions.CAF  bill.cfg  hair_8.xrf  postures.caf  tutorial2.xml  wander1.caf
PIAVCA/Doc/: Doxyfile  Piavca.dox
PIAVCA/Doc/Piavca_doc/: PiavcaPythonUserGuide.sxw  PiavcaUserGuide.doc  PiavcaUserGuide.sxw
PIAVCA/Doc/PythonDocs/: Piavca-module.html  Piavca-pysrc.html  Piavca.AnimationTrack-module.html  Piavca.AnimationTrack-pysrc.html  Piavca.AnimationTrack.AnimationInterface-class.html  Piavca.AnimationTrack.AnimationInterfaceCallback-class.html  Piavca.AudioMotion'-module.html  Piavca.AudioMotion'-pysrc.html  Piavca.AudioMotion'.AudioMotion-class.html  Piavca.ChoiceMotion-class.html  Piavca.ClusterMotionGraph'-module.html  Piavca.ClusterMotionGraph'-pysrc.html  Piavca.ClusterMotionGraph'.ClusterMotionGraph-class.html  Piavca.ConversationInterface-module.html  Piavca.ConversationInterface-pysrc.html  Piavca.ConversationInterface.ConversatioInterfaceUnsupportedError-class.html  Piavca.ConversationInterface.ConversationInterface-class.html  Piavca.CoreProxy-module.html  Piavca.CoreProxy-pysrc.html  Piavca.CreationScripts-module.html  Piavca.CreationScripts-pysrc.html  Piavca.CreationScripts.InterruptableSequence-module.html  Piavca.CreationScripts.InterruptableSequence-pysrc.html  Piavca.CreationScripts.MotionGraph-module.html  Piavca.CreationScripts.MotionGraph-pysrc.html  Piavca.DataStream-module.html  Piavca.DataStream-pysrc.html  Piavca.DataStream.DataSequence-class.html  Piavca.DataStream.IntSequenceDisplay-class.html  Piavca.DataStream.IntegerDataSequence-class.html  Piavca.DataStream.SequenceDisplay-class.html  Piavca.EigenAnalysis'-module.html  Piavca.EigenAnalysis'-pysrc.html  Piavca.EigenAnalysis'.EigenAnalysis-class.html  Piavca.EigenMotion'-module.html  Piavca.EigenMotion'-pysrc.html  Piavca.EigenMotion'.EigenMotion-class.html  Piavca.EigenMotion'.PCAMotion-class.html  Piavca.EventsGUI-module.html  Piavca.EventsGUI-pysrc.html  (+369 more)
PIAVCA/Java/: .sconsign.dblite  SConstruct  Test.java
PIAVCA/Java/src/: Piavca.java
PIAVCA/Python/: EigenAnalysis.py  EigenMotion.py  FirstPersonEngine.py  FreeCameraViewer.py  JointNames.py  Makefile.am  Makefile.in  MotionEditor.py  MotionFile.py  PCA.py  Piavca.py  PiavcaDesigner.py  PiavcaScriptEngine.py  ScriptEngine.py  SoundEngine.py  Viewer.py  XMLMotionFile.py  gltb.py  initXVRPiavca.py  redirect.py  setup.py  wxViewer.py
PIAVCA/Python/Piavca/: AnimationTrack.py  AudioMotion.py  ClusterMotionGraph.py  ConversationInterface.py  CoreProxy.py  DataStream.py  DynamicTimewarp.py  EigenAnalysis.py  EigenMotion.py  EventsGUI.py  ExpMap.py  FSM.py  FootPlantOnSpot.py  FreeCameraCanvas.py  GraphSearch.py  ImportException.py  JointNames.py  Makefile.am  Makefile.in  MaxXAFReader.py  MotionFile.py  MotionGraph.py  MotionIterators.py  MotionTracks.py  PCA.py  ParameterMotion.py  PiavcaGlut.py  PiavcaWXApp.py  PiavcaWXCanvas.py  Piavca_base.py  PositionHandler.py  ScriptEngine.py  SoundEngine.py  SpeechToText.py  Split.py  StrongConnectivity.py  Track.py  ViewerCanvas.py  XMLMotionFile.py  __init__.py  (+4 more)
PIAVCA/c74support/max-includes/: ext_proto.h  ext_strings.h
PIAVCA/cally/: DataTags.txt  HandsOnHips.xaf  JointNames.txt  Joints.txt  LHandOnHip.xaf  PiavcaCout.txt  PyTest.py  RHandOnHip.xaf  armsCrossed.xaf  bvhreaderOut.txt  cally.cfg  cally.max  cally.xmf  cally.xsf  cally_chest.xrf  cally_head.xmf  cally_l_arm.xmf  cally_l_leg.xmf  cally_mat1.CRF  cally_pelvis.xrf  cally_ponytail.xmf  cally_ponytail.xrf  cally_r_arm.xmf  cally_r_leg.xmf  cally_skin.xrf  cally_torso.xmf  gesture1.xaf  gesture2.xaf  gesture3.xaf  gesture4.xaf  gestureL1.xaf  gestureL2.xaf  gestureL3.xaf  gestureL4.xaf  gestureR1.xaf  gestureR2.xaf  gestureR3.xaf  gestureR4.xaf  init_piavca.py  master.conf  (+8 more)
PIAVCA/exampleOFApp/Bill/: Bill_newmaterial.xmf  black_6.xrf  tie_top_10.xrf
PIAVCA/exampleOFApp/openFrameworks.xcodeproj/: marco.mode1v3  marco.pbxuser  project.pbxproj
PIAVCA/exampleOFApp/src/: testApp.cpp  testApp.h
PIAVCA/m4/: ac_python_devel.m4
PIAVCA/piavca.xcodeproj/: marco.mode1v3  marco.pbxuser  project.pbxproj
PIAVCA/src/: Makefile.am  Makefile.in  ofxPiavca.cpp  ofxPiavca.h
PIAVCA/src/PiavcaAPI/: Avatar.cpp  Avatar.h  AvatarImp.cpp  AvatarImp.h  AvatarMotion.cpp  AvatarMotion.h  AvatarMotionQueue.cpp  AvatarMotionQueue.h  AvatarPosture.cpp  AvatarPosture.h  AvatarPostureBlend.cpp  AvatarPostureBlend.h  BlendBetween.cpp  BlendBetween.h  BodyToFacial.h  Bound.cpp  Bound.h  ChangeMotionLength.h  ChoiceBase.h  ChoiceLoopMotion.h  ChoiceMotion.cpp  ChoiceMotion.h  ChoiceMotionWithDefault.cpp  ChoiceMotionWithDefault.h  CurrentValueMotion.h  DiadicGazeMotion.h  EventMapChoice.cpp  EventMapChoice.h  ExpMapMotion.cpp  ExpMapMotion.h  Hermite.cpp  Hermite.h  KeyframeMotion.cpp  KeyframeMotion.h  LogMapMotion.cpp  LogMapMotion.h  LookAtMotion.cpp  LookAtMotion.h  LoopMotion.h  Makefile.am  (+102 more)
PIAVCA/src/PiavcaCal3dApp/: Makefile.am  Makefile.in  PiavcaCal3dApp.cpp  PiavcaCal3dApp.vcproj  PiavcaCal3dApp_2003.vcproj  PiavcaCal3dApp_vc2005.vcproj  PiavcaCal3dApp_vc2008.vcproj  ReadMe.txt  gltb.cpp  gltb.h
PIAVCA/src/PiavcaCal3dImp/: AvatarCal3dImp.cpp  AvatarCal3dImp.h  Cal3dMathsConversion.h  Makefile.am  Makefile.in  MotionCal3dImp.cpp  MotionCal3dImp.h  ObjectCal3dImp.cpp  ObjectCal3dImp.h  PiavcaCal3DImp.vcproj  PiavcaCal3DImp_2003.vcproj  PiavcaCal3DImp_vc2005.vcproj  PiavcaCal3DImp_vc2008.vcproj  PiavcaCal3dCore.cpp  PiavcaCal3dCore.h  ReadMe.txt  Resource.h  TextureHandler.cpp  TextureHandler.h  glew.h  glxew.h  hardwaremodel.cpp  hardwaremodel.h  stdafx.cpp  tga.cpp
PIAVCA/src/PiavcaGlut/: Makefile.am  PiavcaGlut.cpp  (+6 more)
(+234 files in other folders)
