# not a GNU package. You can remove this line, if
# have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign 1.4
ACLOCAL_AMFLAGS = -I m4

SUBDIRS = src/PiavcaAPI src/PiavcaNVCLib src src/StdMotionImp src/PiavcaPythonInterface src/PiavcaCal3dImp src/PiavcaCal3dApp src/PiavcaOpenSGImp src/PiavcaOpenSGApp

lib_LIBRARIES = 
