AC_INIT(configure.in)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(Piavca, 0.0.99)


AC_LANG_CPLUSPLUS
AC_PROG_CXX
AM_PROG_LIBTOOL
AC_PROG_LEX
AC_PROG_YACC
AC_PYTHON_DEVEL(>= '2.3')
AC_PROG_SWIG
SWIG_ENABLE_CXX
SWIG_MULTI_MODULE_SUPPORT
SWIG_PYTHON
AM_PATH_PYTHON


AC_OUTPUT(Makefile src/Makefile src/PiavcaAPI/Makefile src/StdMotionImp/Makefile src/PiavcaPythonInterface/Makefile src/PiavcaCal3dImp/Makefile src/Piavca_base/Makefile src/PiavcaGlut/Makefile)
